[gd_scene load_steps=8 format=3 uid="uid://xrpc1otru81x"]

[ext_resource type="Script" path="res://Scenes/Menus/PageLibraryMenu/page_library_menu.gd" id="1_fifst"]
[ext_resource type="Texture2D" uid="uid://io35wpu802fp" path="res://assets/Sprites/UI/BackPatches/Patch_64_12.png" id="2_n87we"]
[ext_resource type="Texture2D" uid="uid://ccwj8ucsjhl6w" path="res://assets/Sprites/UI/BackPatches/Patch_64_12_Dark.png" id="2_xdrho"]
[ext_resource type="Theme" uid="uid://bfce41la62bs6" path="res://Scenes/Themes/readable_theme.tres" id="4_4wgxq"]
[ext_resource type="Script" path="res://Scenes/UiNodes/loaded_option_button.gd" id="4_f1xd1"]
[ext_resource type="Script" path="res://Scenes/Menus/PageLibraryMenu/entry_group_container.gd" id="5_1qkpm"]
[ext_resource type="PackedScene" uid="uid://xjhbo48tdbhr" path="res://Scenes/Menus/PageLibraryMenu/PageDetails/page_details_entry_container.tscn" id="7_ykmfd"]

[node name="PageLibraryMenu" type="Control" node_paths=PackedStringArray("close_button", "reload_pages_button", "scale_slider", "loading_patch", "scroll_ocntainer", "tag_filter", "page_entries_container", "premade_entry_group", "example_page_entry", "load_time_label", "showing_label", "action_check_box", "actor_check_box", "effect_check_box", "item_check_box")]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_fifst")
close_button = NodePath("VBoxContainer/NinePatchRect/HBoxContainer/CloseButton")
reload_pages_button = NodePath("VBoxContainer/NinePatchRect/HBoxContainer/ReloadButton")
scale_slider = NodePath("VBoxContainer/NinePatchRect/HBoxContainer/HSlider")
loading_patch = NodePath("VBoxContainer/LoadingScreenPatch")
scroll_ocntainer = NodePath("VBoxContainer/ScrollContainer")
tag_filter = NodePath("VBoxContainer/NinePatchRect/HBoxContainer/LoadedOptionButton")
page_entries_container = NodePath("VBoxContainer/ScrollContainer/VBoxContainer")
premade_entry_group = NodePath("VBoxContainer/ScrollContainer/VBoxContainer/EntryGroupContainer")
example_page_entry = NodePath("VBoxContainer/ScrollContainer/VBoxContainer/EntryGroupContainer/EntryGroupInnerContainer/SubEntriesContainer/PageDetailsEntryContainer")
load_time_label = NodePath("VBoxContainer/NinePatchRect/HBoxContainer/LoadTimeLabel")
showing_label = NodePath("VBoxContainer/NinePatchRect/HBoxContainer/HBoxContainer/ShowingValue")
action_check_box = NodePath("VBoxContainer/NinePatchRect/HBoxContainer/HBoxContainer/ActionsCheckBox")
actor_check_box = NodePath("VBoxContainer/NinePatchRect/HBoxContainer/HBoxContainer/ActorsCheckBox")
effect_check_box = NodePath("VBoxContainer/NinePatchRect/HBoxContainer/HBoxContainer/EffectsCheckBox")
item_check_box = NodePath("VBoxContainer/NinePatchRect/HBoxContainer/HBoxContainer/ItemsCheckBox")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
alignment = 1

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
texture = ExtResource("2_xdrho")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/NinePatchRect"]
layout_mode = 1
anchors_preset = -1
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 8.0
offset_top = 6.0
offset_right = -8.0
offset_bottom = -4.0
grow_horizontal = 2
grow_vertical = 2

[node name="TitleLabel2" type="Label" parent="VBoxContainer/NinePatchRect/HBoxContainer"]
layout_mode = 2
theme = ExtResource("4_4wgxq")
theme_override_font_sizes/font_size = 32
text = "Tag:"

[node name="LoadedOptionButton" type="OptionButton" parent="VBoxContainer/NinePatchRect/HBoxContainer"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
allow_reselect = true
script = ExtResource("4_f1xd1")
allways_show_none = true
no_option_text = "All"

[node name="ReloadButton" type="Button" parent="VBoxContainer/NinePatchRect/HBoxContainer"]
layout_mode = 2
text = "Reload"

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/NinePatchRect/HBoxContainer"]
layout_mode = 2

[node name="ActionsCheckBox" type="CheckBox" parent="VBoxContainer/NinePatchRect/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Pages"

[node name="ActorsCheckBox" type="CheckBox" parent="VBoxContainer/NinePatchRect/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Actors"

[node name="EffectsCheckBox" type="CheckBox" parent="VBoxContainer/NinePatchRect/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Effects"

[node name="ItemsCheckBox" type="CheckBox" parent="VBoxContainer/NinePatchRect/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Items"

[node name="ShowingLabel" type="Label" parent="VBoxContainer/NinePatchRect/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Showing:"

[node name="ShowingValue" type="Label" parent="VBoxContainer/NinePatchRect/HBoxContainer/HBoxContainer"]
layout_mode = 2
text = "00"

[node name="ScaleLabel3" type="Label" parent="VBoxContainer/NinePatchRect/HBoxContainer"]
visible = false
layout_mode = 2
theme = ExtResource("4_4wgxq")
theme_override_font_sizes/font_size = 32
text = "  Scale:"

[node name="HSlider" type="HSlider" parent="VBoxContainer/NinePatchRect/HBoxContainer"]
visible = false
custom_minimum_size = Vector2(400, 32)
layout_mode = 2
min_value = 0.1
max_value = 5.0
step = 0.1
value = 1.0

[node name="Label" type="Label" parent="VBoxContainer/NinePatchRect/HBoxContainer"]
visible = false
layout_mode = 2
text = " Load TIme:"

[node name="LoadTimeLabel" type="Label" parent="VBoxContainer/NinePatchRect/HBoxContainer"]
visible = false
layout_mode = 2
text = "XXXXX"

[node name="VSeparator" type="VSeparator" parent="VBoxContainer/NinePatchRect/HBoxContainer"]
self_modulate = Color(1, 1, 1, 0)
layout_mode = 2
size_flags_horizontal = 3

[node name="CloseButton" type="Button" parent="VBoxContainer/NinePatchRect/HBoxContainer"]
layout_mode = 2
text = "Close"

[node name="ScrollContainer" type="ScrollContainer" parent="VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="VBoxContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EntryGroupContainer" type="Container" parent="VBoxContainer/ScrollContainer/VBoxContainer" node_paths=PackedStringArray("title_label", "entries_container", "background", "inner_container")]
custom_minimum_size = Vector2(24, 314)
layout_mode = 2
script = ExtResource("5_1qkpm")
title_label = NodePath("EntryGroupInnerContainer/TitlerLabel")
entries_container = NodePath("EntryGroupInnerContainer/SubEntriesContainer")
background = NodePath("NinePatchRect")
inner_container = NodePath("EntryGroupInnerContainer")
force_fill_x = true

[node name="NinePatchRect" type="NinePatchRect" parent="VBoxContainer/ScrollContainer/VBoxContainer/EntryGroupContainer"]
layout_mode = 2
texture = ExtResource("2_n87we")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="EntryGroupInnerContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/EntryGroupContainer"]
layout_mode = 2

[node name="TitlerLabel" type="Label" parent="VBoxContainer/ScrollContainer/VBoxContainer/EntryGroupContainer/EntryGroupInnerContainer"]
custom_minimum_size = Vector2(420, 0)
layout_mode = 2
theme = ExtResource("4_4wgxq")
theme_override_font_sizes/font_size = 32
text = "Page Name"

[node name="SubEntriesContainer" type="VBoxContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/EntryGroupContainer/EntryGroupInnerContainer"]
layout_mode = 2

[node name="PageDetailsEntryContainer" parent="VBoxContainer/ScrollContainer/VBoxContainer/EntryGroupContainer/EntryGroupInnerContainer/SubEntriesContainer" instance=ExtResource("7_ykmfd")]
custom_minimum_size = Vector2(24, 263)
layout_mode = 2
center_from = 0

[node name="LoadingScreenPatch" type="NinePatchRect" parent="VBoxContainer"]
visible = false
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
size_flags_vertical = 3
texture = ExtResource("2_xdrho")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12

[node name="CenterContainer" type="CenterContainer" parent="VBoxContainer/LoadingScreenPatch"]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Label" type="Label" parent="VBoxContainer/LoadingScreenPatch/CenterContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 64
text = "Loading"

[node name="NinePatchRect2" type="NinePatchRect" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 48)
layout_mode = 2
texture = ExtResource("2_xdrho")
patch_margin_left = 12
patch_margin_top = 12
patch_margin_right = 12
patch_margin_bottom = 12
